@@ -3,8 +3,9 @@
     under Python 2.7. Reported by Arfrever Frehtes Taifersar Arahesis.
   * Since 5.0.0, we can't find 4.x libraries unless we specify a
     "--berkeley-db=/path/to/bsddb" option. Reported by Wen Heping.
-  * Support for "DB->get_dbname()", "DB->get_open_flags()",
-    "db_full_version()".
+  * Support "DB_ENV->get_open_flags()".
+  * Support "DB->get_dbname()", "DB->get_open_flags()".
+  * Support "db_full_version()".
   * Document "version()". This top-level function has been supported forever.
 
 5.1.1:
